correction sidebar version mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ main {
   transition: var(--transition-2);
 }
 
-.sidebar.active { max-height: 405px; }
+.sidebar.active { max-height: 600px; }
 
 .sidebar-info {
   position: relative;
